<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="AnniversaryAddBinding">

        <variable
            name="model"
            type="tsdday.com.yts.tsdday.viewmodel.AddAnniversaryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/layout_hearder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_close"
                setTint="@{true}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:onClick="@{(v) -> model.close(v)}"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_anniversary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:onClick="@{(v)->model.onSave(v)}"
                android:padding="16dp"
                android:text="@string/save"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/layout_hearder">
            <!--기본-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/basics"
                android:textColor="@color/gray_dark"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/title"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="end"
                    android:hint="@string/hint_title"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:onTextChanged="@{(text, start, before, count) -> model.onTextChanged(text)}"
                    android:padding="16dp"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/start_date"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="end"
                    android:hint="@string/hint_date"
                    android:onClick="@{()->model.onClickDate()}"
                    android:padding="16dp"
                    android:text="@{model.date}"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="14sp" />
            </LinearLayout>

            <!--반복-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/repeat"
                android:textColor="@color/gray_dark"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:buttonTint="@color/colorAccent"
                android:paddingLeft="16dp"
                android:text="@string/repeat_every_year"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:buttonTint="@color/colorAccent"
                android:paddingLeft="16dp"
                android:text="@string/repeat_monthly"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>