<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="AlbumItemHeaderBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="tsdday.com.yts.tsdday.viewmodel.AlbumItemHeaderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(v)->model.hideKeyBoard(v)}"
            android:orientation="vertical">
            <!--기본-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/basics"
                android:textColor="@color/gray_dark"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/date"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="end"
                    android:hint="@string/hint_date"
                    android:onClick="@{() -> model.clickDate()}"
                    android:padding="16dp"
                    android:text="@{model.albumObservableField.date}"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="14sp" />
            </LinearLayout>


            <!--       <android.support.design.widget.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:padding="16dp">

                       <android.support.design.widget.TextInputEditText
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:focusableInTouchMode="false"
                           android:hint="@string/date"
                           android:onClick="@{() -> model.clickDate()}"
                           android:text="@{model.albumObservableField.date}"
                           android:textSize="12sp" />
                   </android.support.design.widget.TextInputLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/title"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="end"
                    android:hint="@string/hint_title"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:onTextChanged="@{model::onTextChanged}"
                    android:padding="16dp"
                    android:text="@{model.albumObservableField.title}"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_light" />

            <!--앨범-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/album"
                android:textColor="@color/gray_dark"
                android:textSize="12sp" />


            <!--            <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/edit_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/title"
                                android:onTextChanged="@{model::onTextChanged}"
                                android:text="@{model.albumObservableField.title}"
                                android:textSize="12sp" />
                        </android.support.design.widget.TextInputLayout>-->

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>